--- a/templates/elections.html
+++ b/templates/elections.html
@@ -2,196 +2,143 @@
 <html>
 
 <head>
-	<title>SLIDE TEST</title>
-	<link href="/static/css/slide.css" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <title>SLIDE TEST</title>
+    <link href="/static/css/slide.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 
 <body>
-	<div id="school_logo">
-		<img id="logo_pic" src="/static/images/logo_sml.png" />
-		<h1>National Public School Indiranagar</h1>
-	</div>
-	<div id="left_hover"></div>
-	<div id="left">
-		<button id="left_button"> &#60;</button>
-	</div>
-	<div id="viewport"></div>
-	<div id="right_hover"></div>
-	<div id="right">
-		<button id="right_button"> &#62;</button>
-	</div>
-	<script src="/static/js/slides.js"></script>
-	<script src="/static/js/poll.js"></script>
-	<script>
-		// ------------------------------------------------------------------------------------------------------------------
-		// POLL CREATION
-		var data, polls;
-		polls = [];
-		xhr = new XMLHttpRequest();
-		var url = "/getcandidates";
-		xhr.onreadystatechange = function () {
-			if (xhr.readyState == 4 && xhr.status == 200) {
-				data = JSON.parse(xhr.responseText);
-				createPolls();
-			}
-		};
-		xhr.open("GET", url, true);
-		window.onload = xhr.send();
+    <div id="school_logo">
+        <img id="logo_pic" src="/static/images/logo_sml.png" />
+        <h1>National Public School Indiranagar</h1>
+    </div>
+    <div id="left_hover"></div>
+    <div id="left"><button id="left_button"> 	&#60;</button></div>
+    <div id="viewport"></div>
+    <div id="right_hover"></div>
+    <div id="right"><button id="right_button"> 	&#62;</button></div>
+    <script src="/static/js/slides.js"></script>
+    <script src="/static/js/poll.js"></script>
+    <script>
+        // ------------------------------------------------------------------------------------------------------------------
+        // POLL CREATION
+        var data, polls;
+        polls = [];
+        xhr = new XMLHttpRequest();
+        var url = "/getcandidates";
+        xhr.onreadystatechange = function() {
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                data = JSON.parse(xhr.responseText);
+                createPolls();
+            }
+        };
+        xhr.open("GET", url, true);
+        window.onload = xhr.send();
 
-		function start_elections(i) {
-			polls[i].start_elections();
-		}
-
-		function end_elections(i) {
-			polls[i].end_elections();
-		}
-
-		function vote_candidate(i, j) {
-			polls[i].vote(j);
-		}
-
-		function undo_vote(i) {
-			polls[i].undo();
-		}
-
-		function createPolls() {
-			data.polls.forEach(function (pollValue, index) {
-				polls.push(new Poll(index, pollValue.name, pollValue.foreColor, pollValue.backColor, pollValue.message));
-				pollValue.candidates.forEach(function (candidate) {
-					polls[index].addCandidate(candidate);
-				});
-			});
-			createPresentation();
-		};
-		// ------------------------------------------------------------------------------------------------------------------
-		function createPresentation() {
-			var elections = new Presentation();
-			for (poll in polls) {
-				elections.newSlide("title", {
-					"heading": polls[poll].office + " Elections",
-					"subheading": polls[poll].message,
-					"b_col": polls[poll].backColor,
-					"t_col": polls[poll].foreColor
-				}, polls[poll])
-				elections.newSlide("election", {
-					"heading": polls[poll].office + " Elections",
-					"b_col": polls[poll].backColor,
-					"t_col": polls[poll].foreColor,
-					"poll": polls[poll]
-				}, polls[poll])
-			}
-
-			Id("left").onclick = function () {
-				elections.previousSlide();
-			}
-			Id("right").onclick = function () {
-				elections.nextSlide();
-			}
-
-			document.onkeydown = function (e) {
-				switch (e.keyCode) {
-				case 37: // Left key code
-					e.preventDefault();
-					elections.previousSlide();
-					break;
-				case 39: // Right key code
-					e.preventDefault();
-					elections.nextSlide();
-					break;
+				function start_elections(i) {
+					polls[i].start_elections();
 				}
-			};
-
-			function decl_result(i) {
-				console.log(polls[i].evaluateWinner());
-			}
-
-			function createPolls() {
-				data.polls.forEach(function (pollValue, index) {
-					polls.push(new Poll(index, pollValue.name, pollValue.foreColor, pollValue.backColor, pollValue.message));
-					for (candidate in pollValue.candidates) {
-						polls[index].addCandidate(pollValue.candidates[candidate]);
-					}
-				});
-				createPresentation();
-			};
-			// ------------------------------------------------------------------------------------------------------------------
-			function createPresentation() {
-				var elections = new Presentation();
-				for (poll in polls) {
-					elections.newSlide("title", {
-						"heading": polls[poll].office + " Elections",
-						"subheading": polls[poll].message,
-						"b_col": polls[poll].backColor,
-						"t_col": polls[poll].foreColor,
-						"poll": polls[poll]
-					}, polls[poll])
-					elections.newSlide("election", {
-						"heading": polls[poll].office + " Elections",
-						"b_col": polls[poll].backColor,
-						"t_col": polls[poll].foreColor,
-						"poll": polls[poll]
-					}, polls[poll])
+				
+				function end_elections(i) {
+					polls[i].end_elections();
 				}
-
-				Id("left").onclick = function () {
-					elections.previousSlide();
+				
+				function vote_candidate(i,j) {
+					polls[i].vote(j);
 				}
-				Id("right").onclick = function () {
-					elections.nextSlide();
+				
+				function undo_vote(i) {
+					polls[i].undo();
 				}
-
-				document.onkeydown = function (e) {
-					switch (e.keyCode) {
-					case 37: // Left key code
-						e.preventDefault();
-						elections.previousSlide();
-						break;
-					case 39: // Right key code
-						e.preventDefault();
-						elections.nextSlide();
-						break;
-					}
-				};
-
-				setTimeout(function () {
-					construct_ui();
-					elections.start()
-				}, 500)
-			}
-			// -------------------------------------------------------------------------------------------------------
-
-			function Id(Id) {
-				return document.getElementById(Id);
-			}
-
-			function Cl(cl) {
-				return document.getElementsByClassName(cl);
-			}
-
-			window.onresize = function () {
-				construct_ui()
-			};
-
-			function construct_ui() {
-				center_elem = Cl("center");
-				fill_height_elem = Cl("fill-height");
-				var i;
-				for (i = 0; i < center_elem.length; i++) {
-					center_elem[i].style.marginTop = (window.innerHeight - center_elem[i].offsetHeight) / 2 + "px";
-					center_elem[i].style.marginLeft = (window.innerWidth - center_elem[i].offsetWidth) / 2 + "px";
+				function decl_result(i) {
+					console.log(polls[i].evaluateWinner());
 				}
-				for (i = 0; i < fill_height_elem.length; i++) {
-					fill_height_elem[i].style.height = (window.innerHeight - fill_height_elem[i].offsetTop) + "px";
-				}
-			}
+				
+        function createPolls() {
+            data.polls.forEach(function(pollValue, index) {
+                polls.push(new Poll(index, pollValue.name, pollValue.foreColor, pollValue.backColor, pollValue.message));
+                for (candidate in pollValue.candidates) {
+                    polls[index].addCandidate(pollValue.candidates[candidate]);
+                }
+            });
+            createPresentation();
+        };
+        // ------------------------------------------------------------------------------------------------------------------
+        function createPresentation() {
+            var elections = new Presentation();
+            for (poll in polls) {
+                elections.newSlide("title", {
+                    "heading": polls[poll].office + " Elections",
+                    "subheading": polls[poll].message,
+                    "b_col": polls[poll].backColor,
+                    "t_col": polls[poll].foreColor,
+                    "poll":polls[poll]
+                },polls[poll])
+                elections.newSlide("election", {
+                    "heading": polls[poll].office + " Elections",
+                    "b_col": polls[poll].backColor,
+                    "t_col": polls[poll].foreColor,
+                    "poll": polls[poll]
+                },polls[poll])
+            }
 
-			window.addEventListener('beforeunload', function (event) {
-				event.returnValue = 'Exitting in the middle of ongoing elections might result in loss of data. Continue?';
-			});
-	</script>
+            Id("left").onclick = function() {
+                elections.previousSlide();
+            }
+            Id("right").onclick = function() {
+                elections.nextSlide();
+            }
 
+            document.onkeydown = function(e) {
+                switch (e.keyCode) {
+                    case 37: // Left key code
+                    		e.preventDefault();
+                        elections.previousSlide();
+                        break;
+                    case 39: // Right key code
+                    		e.preventDefault();
+                        elections.nextSlide();
+                        break;
+                }
+            };
+
+            setTimeout(function() {
+                construct_ui();
+                elections.start()
+            }, 500)
+        }
+        // -------------------------------------------------------------------------------------------------------
+
+        function Id(Id) {
+            return document.getElementById(Id);
+        }
+
+        function Cl(cl) {
+            return document.getElementsByClassName(cl);
+        }
+
+        window.onresize = function() {
+            construct_ui()
+        };
+
+        function construct_ui() {
+            center_elem = Cl("center");
+            fill_height_elem = Cl("fill-height");
+            var i;
+            for (i = 0; i < center_elem.length; i++) {
+                center_elem[i].style.marginTop = (window.innerHeight - center_elem[i].offsetHeight) / 2 + "px";
+                center_elem[i].style.marginLeft = (window.innerWidth - center_elem[i].offsetWidth) / 2 + "px";
+            }
+            for (i = 0; i < fill_height_elem.length; i++) {
+                fill_height_elem[i].style.height = (window.innerHeight - fill_height_elem[i].offsetTop) + "px";
+            }
+        }
+        
+        window.addEventListener('beforeunload', function (event) {
+	event.returnValue = 'Exitting in the middle of ongoing elections might result in loss of data. Continue?';
+});
+    </script>
 </body>
 
 </html>
