--- a/templates/elections2.html
+++ b/templates/elections2.html
@@ -4,23 +4,23 @@
 <head>
 	<title>Edison - Elections</title>
 
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Conduct Elections">
-	<meta name="author" content="Rachit Verma, Rishit Bansal, Muktaka Joshipura">
+	<meta charset='UTF-8'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<meta name='description' content='Conduct Elections'>
+	<meta name='author' content='Rachit Verma, Rishit Bansal, Muktaka Joshipura'>
 
-	<link href="/static/css/slide.css" rel="stylesheet">
+	<link href='/static/css/slide.css' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+	<link rel='stylesheet' href='/static/css/bootstrap.min.css'>
 
-	<script src="/static/js/poll2.js"></script>
-	<script src="/static/js/FirstInterface.js"></script>
+	<script src='/static/js/poll2.js'></script>
+	<script src='/static/js/FirstInterface.js'></script>
 </head>
 
-<body>
+<body id='container'>
 	<script>
-		var interface = new FirstInterface();
+		var interface = new FirstInterface('container');
 	</script>
 </body>
 
