--- a/static/css/FirstInterface.css
+++ b/static/css/FirstInterface.css
@@ -13,15 +13,9 @@ div#nav {
 	top: 0px;
 	left: 0px;
 	right: 0px;
-	width: 100%;
 	padding: 1em 1.5em;
 	z-index: 999;
 	bottom: auto;
-	transition: opacity 0.5s;
-}
-
-div#nav:hover {
-	opacity: 1 !important;
 }
 
 div#navBarButtonGroup {
@@ -35,6 +29,11 @@ div#navBarButtonGroup>button {
 	margin-left: 0.5em;
 }
 
+button {
+	color: inherit;
+	cursor: pointer;
+}
+
 button:disabled {
 	cursor: not-allowed;
 }
@@ -45,7 +44,17 @@ div.slide {
 	margin: 0em;
 	padding: 0em;
 	position: absolute;
-	transition-duration: 0.5s;
+	transition: left 0.5s;
+}
+
+div#introSlide,
+div#resultsSlide {
+	background-size: cover;
+}
+
+div#introSlide>div.centeredContainer {
+	background-color: rgba(0, 0, 0, 0.7);
+	padding-bottom: 1.5em;
 }
 
 div.centeredContainer {
@@ -56,15 +65,20 @@ div.centeredContainer {
 
 h1 {
 	font-size: 4.375em;
+	font-weight: normal;
+	margin: 0.25em;
 }
 
 h2 {
 	font-size: 2.5em;
+	margin: 0.25em;
+	font-weight: normal;
 }
 
 h2.winnerDeclaration {
 	position: absolute;
 	text-align: center;
+	margin: 0px;
 	margin-bottom: 0.5em;
 	bottom: 100%;
 	right: 0em;
@@ -76,6 +90,7 @@ h3 {
 	margin: 0em;
 	padding: 0.25em;
 	display: inline-block;
+	font-weight: normal;
 }
 
 button.startButton {
@@ -91,7 +106,7 @@ div.candidateButtonGroup {
 	margin: 0em;
 	padding: 0em;
 	width: 100%;
-	height: 50%
+	height: 50%;
 }
 
 button.candidateButton {
@@ -154,7 +169,34 @@ div.controls>button {
 	margin-left: 0.5em;
 }
 
+div#resultsSlide {
+	overflow-y: scroll;
+}
+
 button#resultsButton {
 	background-color: #000000;
 	color: #FFFFFF;
+}
+
+table#resultsTable {
+	background-color: #FFFFFF;
+	color: #000000;
+	margin: 6em auto 1em;
+	text-align: center;
+	width: 90%;
+	border-collapse: collapse;
+}
+
+table#resultsTable>tr#headerRow {
+	background-color: #000000;
+	color: #FFFFFF;
+}
+
+table#resultsTable>tr>td {
+	padding: 0.5em;
+	border: 1px solid #000000;
+}
+
+table#resultsTable>tr>td>img {
+	width: 12.5em;
 }
