--- a/static/css/FirstInterface.css
+++ b/static/css/FirstInterface.css
@@ -5,7 +5,7 @@ body {
 	margin: 0em;
 	padding: 0em;
 	overflow: hidden;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Product Sans';
 }
 
 div#nav {
@@ -134,7 +134,7 @@ div.candidateText {
 	display: block;
 	bottom: 0em;
 	width: 100%;
-	font-size: 1.5em;
+	font-size: 2.2em;
 	transition: color 0.5s;
 	transition: background-color 0.5s;
 }
@@ -199,4 +199,12 @@ table#resultsTable>tr>td {
 
 table#resultsTable>tr>td>img {
 	width: 12.5em;
+}
+
+@font-face {
+  font-family: 'Product Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Product Sans'), local('ProductSans-Regular'), url("/static/fonts/ProductSans.woff2") format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
