--- a/static/css/FirstInterface.css
+++ b/static/css/FirstInterface.css
@@ -93,6 +93,11 @@ h3 {
 	font-weight: normal;
 }
 
+h3.pollNameHeading {
+	opacity: 0.5;
+	padding-left: 0em;
+}
+
 button.startButton {
 	font-size: 1.5em;
 	border: none;
